configured builds for linux

--- a/package.json
+++ b/package.json
@@ -35,17 +35,21 @@
         },
         {
           "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
+          "config": {
+            "name": "screen_recorder"
+          }
         },
         {
           "name": "@electron-forge/maker-deb",
-          "config": {}
+          "config": {
+            "name": "screen_recorder"
+          }
         },
         {
           "name": "@electron-forge/maker-rpm",
-          "config": {}
+          "config": {
+            "name": "screen_recorder"
+          }
         }
       ]
     }
