--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "@electron-forge/publisher-github": "*",
     "electron": "^12.0.7",
     "electron-reload": "^1.5.0"
   },
@@ -49,6 +50,17 @@
           "name": "@electron-forge/maker-rpm",
           "config": {
             "name": "screen_recorder"
+          }
+        }
+      ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "Aditya D.S.",
+              "name": "Screen recorder"
+            }
           }
         }
       ]
